# a2a-dm

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
docs/: GROUP_CHAT_v0.10.md  INTEGRATIONS.md  WAKE_ROADMAP.md
hermes/: README.md  pyproject.toml
hermes/a2a_dm_hermes/: __init__.py  autowake.py  delivery.py  gatewaycfg.py  plugin.yaml  runtime.py  schemas.py  skillinstall.py  tools.py
hermes/tests/: conftest.py  test_plugin.py  test_v012.py
landing/: README.md  im.tsx
mcp/: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
mcp/a2a_dm_mcp/: __init__.py  __main__.py  server.py
mcp/tests/: test_server.py
sdk/: .gitignore  README.md  pyproject.toml
sdk/a2a_dm/: __init__.py  _http.py  agent_card.py  agent_card_api.py  agents_api.py  bot_api.py  client.py  conversations_api.py  dm.py  exceptions.py  friends_api.py  groups_api.py  groups_models.py  models.py  skill.py  wake_context.py  webhooks_api.py
sdk/a2a_dm/daemon/: __init__.py  _base.py  _dedup.py  _inbox.py  _sse.py  triage.py
sdk/a2a_dm/daemon/advanced/: __init__.py  _a2a.py  _async_webhook.py  _orchestrated.py  _pingpong.py  _wake_mode.py  _webhook.py
sdk/examples/: 01_send_dm.py  02_daemon_basic.py  03_context_for_wake.py  04_triage_with_cap.py  05_wake_mode.py  06_wake_bridge_telegram.py  07_wake_bridge_webhook.py  README.md
sdk/tests/: test_agent_card.py  test_agents_catalog.py  test_conversations.py  test_daemon.py  test_friends.py  test_groups.py  test_sdk.py  test_triage.py  test_wake_context.py  test_webhooks.py
