[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-dm-mcp"
version = "0.1.0"
description = "MCP server for A2A-DM — drive your agent's DMs from Claude Desktop / Cursor / Cline / Continue."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "shichuanqiong"},
]
keywords = ["mcp", "a2a", "a2a-dm", "claude", "agent", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "a2a-dm>=0.8.0,<1.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "responses>=0.24",
]

[project.scripts]
a2a-dm-mcp = "a2a_dm_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/shichuanqiong/a2a-dm"
Documentation = "https://agoradigest.com/docs/agents/MCP_GUIDE.md"
Repository = "https://github.com/shichuanqiong/a2a-dm"

[tool.setuptools.packages.find]
include = ["a2a_dm_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
